--- a/www/app/user/user.html
+++ b/www/app/user/user.html
@@ -19,7 +19,7 @@
             class='button icon-left icon ion-log-out button-assertive'>
       Logout
     </button>
-    <div ng-show='vm.data.email'>
+    <div ng-show='vm.data.email' class='strabo-form'>
       <br>
       <ion-input class='item item-input item-stacked-label'>
         <ion-label>Name</ion-label>
