--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -1,27 +1,43 @@
 <ion-view>
-  <ion-content>
-    <button ng-click='vmChild.addImage();'
+  <ion-content class='strabo-image'>
+    <button ng-click='vmChild.addImage()'
             class='button button-clear button-positive'>
       <i class='icon ion-camera'></i>
       <span class='button-text-big'>Add Photo or Image</span>
     </button>
     <input type='file' id='file' style='display: none;'/>
-    <div class='row'>
-      <ul>
-        <li ng-repeat='image in vm.spot.images' class='images-container'>
-          <a><img ng-src='{{image.src}}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
-          <input type='checkbox'
-                 class='annotate-checkbox'
-                 id='check + {{$index}}'
-                 ng-click='vmChild.annotateChecked(image)'
-                 ng-checked='image.annotated'/>
-          <span class='annotate-checkbox-label'>Annotate?</span>
-          <button ng-click='vmChild.goToImageBasemap(image)'
-                  ng-show='image.annotated'
-                  class='button icon ion-map button-small image-basemap'></button>
-        </li>
-      </ul>
+    <div class='row' ng-repeat='image in vm.spot.images'>
+      <div class='col image-col'>
+        <a><img ng-src='{{image.src}}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
+
+      </div>
+      <div class='col'>
+        <ion-input class='item item-input'>
+          <input class='image-title' type='text' ng-model='image.title' placeholder='Image Title'>
+        </ion-input>
+        <ion-input class='item item-input'>
+          <input class='image-description' placeholder='Image description ...' ng-model='image.caption'>
+        </ion-input>
+        <ion-toggle class='toggle-small'
+                    toggle-class='toggle-positive'
+                    ng-model='image.annotated'
+                    ng-click='vmChild.checkTitle(image)'>
+          <span class='toggle-left-image-label'>Image as basemap?
+          </span>
+        </ion-toggle>
+
+        <button ng-click='vmChild.moreDetail(image)'
+                class='button button-clear button-small button-positive'>
+          <i class='icon ion-information-circled'></i>
+          <span class='button-text-small'>More</span>
+        </button>
+        <button ng-click='vmChild.goToImageBasemap(image)'
+                class='button button-small button-clear button-positive'
+                ng-show='image.annotated'>
+          <i class='icon ion-map'></i>
+          <span class='button-text-small'>Map</span>
+        </button>
+      </div>
     </div>
-    {{ vmChild.fileName }}
   </ion-content>
 </ion-view>
