only allow toggle image basemap off if no spots mapped on that image basemap

--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -21,7 +21,7 @@
         <ion-toggle class='toggle-small'
                     toggle-class='toggle-positive'
                     ng-model='image.annotated'
-                    ng-click='vmChild.checkTitle(image)'>
+                    ng-click='vmChild.checkImageBasemapAction(image)'>
           <span class='toggle-left-image-label'>Image as basemap?
           </span>
         </ion-toggle>
