--- a/www/app/spot/images-modal.html
+++ b/www/app/spot/images-modal.html
@@ -3,7 +3,7 @@
     <ion-slide ng-repeat='image in vm.spot.images'>
       <img ng-src='{{image.src}}' class='fullscreen-image' ng-click='vmChild.closeImageModal()'/>
       <textarea rows='3' class='image-modal-textarea' ng-model='image.caption'
-                placeholder='captions for this image'></textarea>
+                placeholder='Image description ...'></textarea>
     </ion-slide>
   </ion-slide-box>
 </div>
