--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -9,19 +9,18 @@
     <div class='row' ng-repeat='image in vm.spot.images'>
       <div class='col image-col'>
         <a><img ng-src='{{image.src}}' width='100' height='100' ng-click='vmChild.showImages($index)'/></a>
-
       </div>
       <div class='col'>
         <ion-input class='item item-input'>
-          <input class='image-title' type='text' ng-model='image.title' placeholder='Image Title'>
-        </ion-input>
+        <input class='image-title' type='text' ng-model='image.title' placeholder='Image Title'>
+      </ion-input>
         <ion-input class='item item-input'>
           <input class='image-description' placeholder='Image description ...' ng-model='image.caption'>
         </ion-input>
         <ion-toggle class='toggle-small'
                     toggle-class='toggle-positive'
                     ng-model='image.annotated'
-                    ng-click='vmChild.checkImageBasemapAction(image)'>
+                    ng-click='vmChild.toggleImageBasemap(image)'>
           <span class='toggle-left-image-label'>Image as basemap?
           </span>
         </ion-toggle>
@@ -39,5 +38,12 @@
         </button>
       </div>
     </div>
+    <div class='item item-divider'>
+      Notes
+    </div>
+    <ion-input class='item item-input'>
+      <textarea class='padding-left' placeholder='Notes about these images as a whole ...' rows='12'
+                ng-model='vm.spot.properties.image_notes'></textarea>
+    </ion-input>
   </ion-content>
 </ion-view>
