don't allow deletion of spots that have image basemaps

--- a/www/app/spot/spots.html
+++ b/www/app/spot/spots.html
@@ -21,7 +21,7 @@
                 ng-click='vm.goToSpot(spot.properties.id)'>
         {{spot.properties.name}}
         <button class='button button-clear button-dark'
-                ng-click='vm.deleteSpot(spot.properties.id)'>
+                ng-click='vm.deleteSpot(spot)'>
           <i class='ion-trash-b'></i>
         </button>
       </ion-item>
