fixed image placeholder values

--- a/www/app/spot/image-properties-modal.html
+++ b/www/app/spot/image-properties-modal.html
@@ -16,19 +16,19 @@
     </div>
     <ion-input class='item item-input item-stacked-label item-text-wrap'>
       <ion-label>Image Name</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.title' placeholder='Image Title'>
+      <input type='text' ng-model='vmChild.currentImage.title' placeholder='Also image basemap name (if applicable)'>
     </ion-input>
     <ion-input class='item item-input item-stacked-label item-text-wrap'>
       <ion-label>Image Description</ion-label>
-      <textarea placeholder='Image description ...' rows='4' ng-model='vmChild.currentImage.caption'></textarea>
+      <textarea placeholder='Write a description of the image here ...' rows='4' ng-model='vmChild.currentImage.caption'></textarea>
     </ion-input>
     <ion-input class='item item-input item-stacked-label item-text-wrap'>
       <ion-label>Scale of Overall Image</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.scale_of_image' placeholder='Image Title'>
+      <input type='text' ng-model='vmChild.currentImage.scale_of_image'>
     </ion-input>
     <ion-input class='item item-input item-stacked-label item-text-wrap'>
       <ion-label>Scale and type of object in image (m)</ion-label>
-      <input type='text' ng-model='vmChild.currentImage.scale_object' placeholder='Image Title'>
+      <input type='text' ng-model='vmChild.currentImage.scale_object'>
     </ion-input>
     <div class='field-group item item-divider'>
       Camera Orientation
