--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -12,7 +12,7 @@
       </div>
       <div class='col'>
         <ion-input class='item item-input'>
-        <input class='image-title' type='text' ng-model='image.title' placeholder='Image Title'>
+        <input class='image-title' type='text' ng-model='image.title' placeholder='Image Name'>
       </ion-input>
         <ion-input class='item item-input'>
           <input class='image-description' placeholder='Image description ...' ng-model='image.caption'>
