--- a/www/index.html
+++ b/www/index.html
@@ -80,6 +80,7 @@
     <!-- ng spot tab controllers -->
     <script src="app/spot/3dstructures-tab.controller.js"></script>
     <script src="app/spot/images-tab.controller.js"></script>
+    <script src="app/spot/inferences-tab.controller.js"></script>
     <script src="app/spot/orientation.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
     <script src="app/spot/sample-tab.controller.js"></script>
