--- a/www/app/spot/images-tab.html
+++ b/www/app/spot/images-tab.html
@@ -43,7 +43,7 @@
     </div>
     <ion-input class='item item-input'>
       <textarea class='padding-left' placeholder='Notes about these images as a whole ...' rows='12'
-                ng-model='vm.spot.properties.image_notes'></textarea>
+                ng-model='vm.spot.properties.images_notes'></textarea>
     </ion-input>
   </ion-content>
 </ion-view>
