--- a/www/app/spot/spot.html
+++ b/www/app/spot/spot.html
@@ -59,6 +59,13 @@ navigation history that also transitions its views in and out.
         Inferences
       </a>
     </span>
+    <span ng-show='vm.showTab("nest")'>
+      <a class='button button-clear spot-tab-inactive'
+         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.nest"}'
+         ng-click='vm.submit("/app/spotTab/" + vm.data.id + "/nest");'>
+        Nest
+      </a>
+    </span>
   </ion-scroll>
 </ion-header-bar>
 
