--- a/www/index.html
+++ b/www/index.html
@@ -81,6 +81,7 @@
     <script src="app/spot/3dstructures-tab.controller.js"></script>
     <script src="app/spot/images-tab.controller.js"></script>
     <script src="app/spot/inferences-tab.controller.js"></script>
+    <script src="app/spot/nest-tab.controller.js"></script>
     <script src="app/spot/orientation.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
     <script src="app/spot/sample-tab.controller.js"></script>
