--- a/www/app/spot/nest-tab.html
+++ b/www/app/spot/nest-tab.html
@@ -1,6 +1,5 @@
 <ion-view>
-  <ion-content class="strabo-form">
-
+  <ion-content class='strabo-form'>
 
     <div ng-show='vmChild.parentSpot'>
       <button ng-click='vmChild.goToSpot(vmChild.parentSpot.properties.id)'
@@ -34,7 +33,7 @@
       Notes
     </div>
     <ion-input class='item item-input'>
-      <textarea placeholder='Notes about these inferences ...' rows='12'
+      <textarea placeholder='Notes about this nest ...' rows='12'
                 ng-model='vm.spot.properties.nest_notes'></textarea>
     </ion-input>
   </ion-content>
