display count of random spots generated

--- a/www/app/debug/debug.html
+++ b/www/app/debug/debug.html
@@ -17,9 +17,9 @@
       </button>
     </div>
 
-    <div class='padding' ng-show='vm.status'>
+    <div class='padding' ng-show='vm.pointsGenerated'>
       <hr>
-      Points generated: {{ vm.status }}
+      Points generated: {{ vm.pointsGenerated }}
     </div>
   </ion-content>
 </ion-view>
