minor style updates

--- a/www/app/debug/debug.html
+++ b/www/app/debug/debug.html
@@ -11,9 +11,9 @@
     </ion-input>
     <div class='padding'>
       <button ng-click='vm.submit(vm.pointsToGenerate)'
-              class='button button-positive'>
+              class='button button-clear button-positive'>
         <i class='icon ion-grid'></i>
-        Generate Spots
+        <span class='button-text-big'>Generate Spots</span>
       </button>
     </div>
 
