--- a/www/index.html
+++ b/www/index.html
@@ -84,6 +84,7 @@
     <script src="app/spot/nest-tab.controller.js"></script>
     <script src="app/spot/orientation.controller.js"></script>
     <script src="app/spot/orientation-data-tab.controller.js"></script>
+    <script src="app/spot/other-features-tab.controller.js"></script>
     <script src="app/spot/sample-tab.controller.js"></script>
     <script src="app/spot/spot-tab.controller.js"></script>
 
