--- a/www/app/spot/inferences-tab.html
+++ b/www/app/spot/inferences-tab.html
@@ -2,28 +2,77 @@
   <ion-content class="strabo-form">
     <ion-toggle class='toggle-large'
                 toggle-class='toggle-positive'
-                ng-model='vm.spot.properties.rosetta_outcrop'>
+                ng-click='vmChild.toggleRosetta()'
+                ng-model='vm.spot.properties.inferences.rosetta_outcrop'>
           <span class='toggle-left-label'>Rosetta (e.g., Particularly Significant) Outcrop?
           </span>
     </ion-toggle>
-    <ion-input class='item item-input'>
-      <ion-label>Description of Outcrop</ion-label>
-      <textarea placeholder='Write the description of the outcrop here ...' rows='4' ng-model='vm.spot.properties.description_of_outcrop'></textarea>
-    </ion-input>
+    <div ng-show='vm.spot.properties.inferences.rosetta_outcrop'>
+      <ion-input class='item item-input'>
+        <ion-label>Description of Outcrop</ion-label>
+        <textarea placeholder='Write the description of the outcrop here ...' rows='4'
+                  ng-model='vm.spot.properties.inferences.description_of_outcrop'></textarea>
+      </ion-input>
+      <div class='padding' ng-show="vmChild.relatedRosettaChoices.length === 0">
+        <ion-label>Related Rosetta Outcrop</ion-label>
+        <span class='padding-left'>No other Rosettas</span>
+      </div>
+      <div ng-show="vmChild.relatedRosettaChoices.length > 0">
+        <ion-input class='item item-input item-select item-text-wrap'>
+          <ion-label>Related Rosetta Outcrop</ion-label>
+          <select ng-model='vm.spot.properties.inferences.related_rosetta_outcrop'
+                  ng-options='choice.properties.id as choice.properties.name for choice in vmChild.relatedRosettaChoices'>
+            <option value=''></option>
+          </select>
+        </ion-input>
+      </div>
+      <ion-input class='item item-input item-select item-text-wrap'>
+        <ion-label>Is outcrop in place?</ion-label>
+        <select ng-model='vm.spot.properties.inferences.outcrop_in_place'
+                ng-options='choice as choice for choice in vmChild.outcropInPlaceChoices'>
+          <option value=''></option>
+        </select>
+      </ion-input>
 
-    <ion-input class='item item-input item-select item-text-wrap'>
-      <ion-label>Related Rosetta Outcrop</ion-label>
-      <select ng-model='vm.spot.properties.related_rosetta_outcrop'
-              ng-options='choice.properties.id as choice.properties.name for choice in vmChild.relatedRosettaChoices'>
-        <option value=''></option>
-      </select>
-    </ion-input>
+      <div class='item item-divider'>
+        Relationships
+      </div>
+      <button ng-click='vmChild.addRelationship()'
+              class='button button-clear button-positive'>
+        <i class='icon ion-plus-circled'></i>
+        <span class='button-text-small'>Add a Relationship</span>
+      </button>
+      <div ng-show='vm.spot.properties.inferences.relationships'>
+        <ion-list>
+          <ion-item class='item-text-wrap item-button-right'
+                    ng-repeat='relationship in vm.spot.properties.inferences.relationships'>
+            {{ relationship.observationA }}
+            <span ng-hide='relationship.relationship === "other"'>{{ relationship.relationship }}</span>
+            <span ng-show='relationship.relationship === "other"'>{{ relationship.other_relationship }}</span>
+            {{ relationship.observationB }}
+            <span ng-show='relationship.deformation_event'><br><small>Deformation Event: {{
+              relationship.deformation_event }}
+            </small></span>
+            <div class='buttons'>
+              <button class='button button-clear button-dark'
+                      ng-click='vmChild.editRelationship($index)'>
+                <i class='ion-edit'></i>
+              </button>
+            <button class='button button-clear button-assertive' ng-click='vmChild.deleteRelationship($index)'>
+              <i class='icon ion-minus-circled'></i>
+            </button>
+              </div>
+          </ion-item>
+        </ion-list>
+      </div>
 
-    <div class='item item-divider'>
-      Notes
+      <div class='item item-divider'>
+        Notes
+      </div>
+      <ion-input class='item item-input'>
+        <textarea placeholder='Notes about these inferences ...' rows='12'
+                  ng-model='vm.spot.properties.inferences.notes'></textarea>
+      </ion-input>
     </div>
-    <ion-input class='item item-input'>
-      <textarea placeholder='Notes about these inferences ...' rows='12' ng-model='vm.spot.properties.inferences_notes'></textarea>
-    </ion-input>
   </ion-content>
 </ion-view>
