changed delete individual items icons to minus-circled

--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -19,11 +19,11 @@
           <div class='buttons'>
             <button class='button button-clear button-dark'
                     ng-click='vm.edit(map)'>
-              <i class='ion-edit'></i>
+              <i class='icon ion-edit'></i>
             </button>
-            <button class='button button-clear button-dark'
+            <button class='button button-clear button-assertive'
                     ng-click='vm.deleteTiles(map)'>
-              <i class='ion-trash-b'></i>
+              <i class='icon ion-minus-circled'></i>
             </button>
           </div>
         </ion-item>
