--- a/www/app/spot/orientation-data-tab.html
+++ b/www/app/spot/orientation-data-tab.html
@@ -31,8 +31,8 @@
           <span ng-if='orientation.feature_type'>Feature Type: {{ orientation.feature_type }}</span>
         </div>
         <div class=" item-button-right">
-          <button class='button button-clear button-dark' ng-click='vmChild.deleteOrientation(orientationIndex)'>
-            <i class='ion-trash-b'></i>
+          <button class='button button-clear button-assertive' ng-click='vmChild.deleteOrientation(orientationIndex)'>
+            <i class='icon ion-minus-circled'></i>
           </button>
         </div>
         <div ng-if='orientation.associated_orientation'>
